<resources>
    <string name="app_name">EngineerMode</string>
    <string name="starttest">start test</string>
    <string name="next">next</string>
    <string name="report">report</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="pleasewait">Please wait...</string>
    <string name="skip">skip</string>
    <string name="shutdowning">shutdowning</string>
    <string name="selectAll">select All</string>
    <string name="selectNone">select None</string>
    <string name="item_duration_second">test duration (s):\u0009</string>
    <string name="test_over">Test completed</string>
    <string name="test_result">test result:</string>
    <string name="all_test_ok">All test results passed</string>
    <string name="test_not_pass">Some tests did not pass</string>
    <string name="test_suc">Test succeeded</string>
    <string name="test_failed">test failed</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="test_virbate">test vibration</string>
    <string name="passunpass">Whether the test succeeded or not</string>
    <string name="retest">retest</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="fastcharger_pass">Fast charger Pass</string>
    <string name="clear_marks">clear mark</string>
    <string name="video_play_title">video play</string>
    <string name="video_play_failed">Failed to play the vedio</string>
    <string name="video_play_fail_file_may_not_exist">file may not exist</string>
    <string name="video_play_file_not_exist">"Video file %1$s doesn't exist"</string>
    <string name="cpu_basic_frequency_title">set CPU basic frequency</string>
    <string name="cpu_basic_frequency_unlock_frequency_failed">CPU failed to unlock frequency</string>
    <string name="cpu_basic_frequency_lock_frequency_failed">CPU failed to unlock frequency</string>
    <string name="cpu_basic_frequency_set_failed">CPU basic frequency settings failed</string>
    <string name="gprs_act_title">GPRS Act</string>
    <string name="gprs_act_attatch">Attatch</string>
    <string name="gprs_act_detatch">Detatch</string>
    <string name="gprs_act_1st_pdp">1st PDP</string>
    <string name="gprs_act_2nd_pdp">2nd PDP</string>
    <string name="gprs_act_send_data">Send data</string>
    <string name="gprs_act_uplink_data_length">Input data length</string>
    <string name="gprs_act_uplink_data_length_invalidate">Input data length is too long</string>
    <string name="gprs_act_uplink_data_length_default">1024</string>
    <string name="protocol_test_switcher">Protocol test switch</string>
    <string name="cfu_test">CFU</string>
    <string name="cfu_textView">CFU Setting:</string>
    <string name="cfu_turn_on">Always query</string>
    <string name="cfu_turn_off">Always not query</string>
    <string name="cfu_ok">Set</string>
    <string name="cfu_default">Set_Default</string>
    <string name="imei_pcb_check">check and encrypt IMEI</string>
    <string name="wifi_test_title">Wi-Fi test</string>
    <string name="nfc_continue_transmit_title">NFC continue transmit</string>
    <string name="nfc_se_test_title">NFC SE test</string>
    <string name="gpio_switch_title">GPIO switch</string>
    <string name="wifi_quick_toggle_title">Wi-Fi</string>
    <string name="wifi_quick_toggle_summary">Turn on Wi-Fi</string>
    <string name="wifi_settings_category">Wi-Fi settings</string>
    <string name="wifi_add_network">Add Wi-Fi network</string>
    <string name="wifi_access_points">Wi-Fi networks</string>
    <string name="wifi_test_download_status">Downloading status via Wi-Fi</string>
    <string name="wifi_test_not_in_download">not in download</string>
    <string name="wifi_test_set_server_ip">set server ip</string>
    <string name="wifi_test_set_server_file_path">set server file path</string>
    <string name="bt_test_title">bluetooth test</string>
    <string name="networkset_title">Network set</string>
    <string name="autotest_title">automatic test</string>
    <string name="manual_test">manual test</string>
    <string name="ring_test_title">ringtone playing</string>
    <string name="ring_test_summary">play built-in ringtones in the system</string>
    <string name="back_camera_preview">rear camera preview</string>
    <string name="camear_falsh">flash-light test</string>
    <string name="camear_falsh2">补光灯测试</string>
    <string name="auto_search_title">auto search</string>
    <string name="auto_search_summary">auto search and connect when logged out</string>
    <string name="software_version">Software version</string>
    <string name="phone_name">Phone name</string>
    <string name="firmware_version">Android Version</string>
    <string name="model">Model</string>
    <string name="baseband_version">Baseband Version</string>
    <string name="kernel_version">Kernel</string>
    <string name="build_number">Version</string>
    <string name="rom_version">Rom Version</string>
    <string name="pcb_number">PCB Number</string>
    <string name="ota_version">OTA Version</string>
    <string name="fenzhi">Sub Branch</string>
    <string name="device_info_default">Unknown</string>
    <string name="branch">Branch</string>
    <string name="branch_version">Branch Version</string>
    <string name="build_time">Build Time</string>
    <string name="audio_test">Audio</string>
    <string name="audio_test_summary">set audio channel</string>
    <string name="audio_set_mode">set mode</string>
    <string name="audio_test_normal_mode">normal mode</string>
    <string name="audio_test_headset_mode">headset mode</string>
    <string name="audio_test_loudspeaker_mode">LoudSpeaker</string>
    <string name="audio_auto_recording_setting_title">Auto Record Setting</string>
    <string name="audio_tone_up_title">tone up</string>
    <string name="autoaging_title">auto aging</string>
    <string name="master_clear_summary">Erase all data in the phone including its internal storage</string>
    <string name="all_clear_title">all clear</string>
    <string name="lisght_sensor_test_title">LightSensor</string>
    <string name="lisght_sensor_test_summary">Light intensity sensing</string>
    <string name="lisght_sensor_offset_test_title">LightSensor Offset</string>
    <string name="lisght_sensor_offset_test_summary">Light Sensor Offset Test</string>
    <string name="rgbsensor_irrate_write_test_title">RGBSensor Test</string>
    <string name="rgbsensor_irrate_write_test_summary">RGB Sensor IR Rate Test</string>
    <string name="proximity_sensor_title">Proximity Sensor Test</string>
    <string name="receiver_test_title">Receiver Test</string>
    <string name="receiver_test_summary">Receiver test</string>
    <string name="auto_fill_title">Fill SMS and contacts</string>
    <string name="qualcomm_settings">QualComm</string>
    <string name="dynamic_nv_tips">Calibration NV</string>
    <string name="dynamic_nv_crc">Calibration NV backup file self-check</string>
    <string name="dynamic_nv_crc_summary">Self-integrity check</string>
    <string name="dynamic_nv_crc_compare">Calibration NV backup file manual check</string>
    <string name="dynamic_nv_crc_compare_summary">Compare the contents of backup NV to distinguish the lost and changed items</string>
    <string name="dynamic_nv_restore">Calibration NV backup file manual restoration</string>
    <string name="dynamic_nv_restore_summary">Write over the NV items in NV partition with backup NV</string>
    <string name="dynamic_nv_backup">Backup Calibration NV</string>
    <string name="dynamic_nv_backup_summary">If still no backup NV file exists, backup calibration-related NV</string>
    <string name="dynamic_nv_force_backup">Calibration NV Force Backup</string>
    <string name="dynamic_nv_force_backup_summary">Force backup the NV after calibration</string>
    <string name="qualcomm_nv_restore_count">Calibration NV restoration times</string>
    <string name="qualcomm_nv_access">Allow restoring calibration NV</string>
    <string name="static_nv_crc">Static NV backup file self-check</string>
    <string name="static_nv_crc_summary">Self-integrity check</string>
    <string name="static_nv_crc_compare">Static NV backup file manual check</string>
    <string name="static_nv_crc_compare_summary">Compare the contents of backup NV to distinguish the lost and changed items.</string>
    <string name="static_nv_restore">Static NV backup file manual restoration</string>
    <string name="static_nv_restore_summary">Overwrite the NV items in NV partition with backup NV</string>
    <string name="static_nv_backup">Backup static NV</string>
    <string name="static_nv_backup_summary">If still no backup NV file exists, backup calibration-related NV</string>
    <string name="static_nv_force_backup">Static NV Force Backup</string>
    <string name="static_nv_force_backup_summary">Force backup static NV</string>
    <string name="qualcomm_nvstatic_tips">Static NV</string>
    <string name="qualcomm_nvstatic_restore_count">Static NV restoration times</string>
    <string name="qualcomm_nvstatic_access">Allow restoring static NV</string>
    <string name="qualcomm_nv_dump">NV Dump</string>
    <string name="qualcomm_ftm">FTM Mode</string>
    <string name="qualcomm_stk">STK toggle</string>
    <string name="doby_test">Dolby Effect</string>
    <string name="common_commands_test">Commonly used commands</string>
    <string name="enter_fastbootmode">Enter Fastboot</string>
    <string name="rf_version">RF_VERSION</string>
    <string name="assertSwitch">Assertion Toggle</string>
    <string name="qeassertSwitch">QE Assertion Toggle</string>
    <string name="btStackLogSwitch">BT protocol layer LOG</string>
    <string name="dumpSwitch">power dump switch</string>
    <string name="systemmonitorSwitch">system monitor switch</string>
    <string name="charing_settings">charging settings</string>
    <string name="log_test">Log_test</string>
    <string name="device_log">Device_log</string>
    <string name="modem_crash">Modem Crash</string>
    <string name="modem_crash_default">Make Modem crash manually</string>
    <string name="modem_version">Modem Version</string>
    <string name="modem_version_default">Touch to load</string>
    <string name="hall_test">Hall rotation detection</string>
    <string name="hall_recording">Hall calibration records</string>
    <string name="hall_calibrate_title">Digital Hall calibration 2</string>
    <string name="hall_switch_title">Shrapnel rotation detection</string>
    <string name="rotation_motor">Rotation motor</string>
    <string name="wifi_version">Wifi firmware version</string>
    <string name="wifi_version_default">Touch to get info</string>
    <string name="bt_version">bt firmware version</string>
    <string name="bt_version_default">Touch to get info</string>
    <string name="oneplus_logkit">oneplus Logkit</string>
    <string name="touch_key_test_title">Touch Key Test</string>
    <string name="rf_cable_config">RF Cable Config</string>
    <string name="supl_app_name">SUPL Tool</string>
    <string name="supl_host">SUPL Host:</string>
    <string name="supl_host_text">supl.google.com</string>
    <string name="supl_port">SUPL Port:</string>
    <string name="supl_port_text">7276</string>
    <string name="supl_msa">MSA</string>
    <string name="supl_msb">MSB</string>
    <string name="supl_standalone">Standalone</string>
    <string name="supl_start">START</string>
    <string name="supl_stop">STOP</string>
    <string name="supl_del_aid_data">Del aiding data</string>
    <string name="supl_loc">Location:</string>
    <string name="supl_ttff">TTFF:</string>
    <string name="supl_view">view:</string>
    <string name="supl_used">used:</string>
    <string name="supl_download">download:</string>
    <string name="oneclick_connectivity_log">Get Wireless Log</string>
    <string name="ddr_aging_test">DDR Aging Test</string>
</resources>