<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:title="@string/phone_name"
        android:key="device_name"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/model"
        android:key="device_model"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/firmware_version"
        android:key="firmware_version"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/baseband_version"
        android:key="baseband_version"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/kernel_version"
        android:key="kernel_version"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/build_number"
        android:key="build_number"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/rom_version"
        android:key="rom_version"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/branch"
        android:key="key_branch"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/fenzhi"
        android:key="fenzhi"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/branch_version"
        android:key="branch_version"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/pcb_number"
        android:key="key_pcb_number"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/build_time"
        android:key="build_time"
        android:summary="@string/device_info_default" />
    <Preference
        android:title="@string/ota_version"
        android:key="key_ota_version"
        android:summary="@string/device_info_default" />
</PreferenceScreen>